--- a/minecraftDiscordDocker/Dockerfile
+++ b/minecraftDiscordDocker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-buster
+FROM debian:buster
 
 ENV ram 2G
 ENV version 1.16
@@ -9,9 +9,10 @@ WORKDIR /
 COPY ./run.sh run.sh
 
 RUN mkdir /app  && \
+	apt -y update &&  \
+	apt -y install openjdk-11-jdk && \
 	mkdir /www && \ 
 	mkdir /shared && \
-	apt -y update &&  \
 	apt -y install tmux &&  \
 	apt -y install wget &&  \
 	apt -y install zip
